// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bulk applies permission template 1`] = `
<BulkApplyTemplateModal
  onClose={[Function]}
  organization="org"
  provisioned={false}
  qualifier="TRK"
  query=""
  selection={Array []}
  total={17}
/>
`;

exports[`deletes projects 1`] = `
<DeleteModal
  onClose={[Function]}
  onConfirm={[Function]}
  organization="org"
  provisioned={false}
  qualifier="TRK"
  query=""
  selection={
    Array [
      "foo",
      "bar",
    ]
  }
  total={17}
/>
`;

exports[`render qualifiers filter 1`] = `
<div
  className="big-spacer-bottom"
>
  <table
    className="data"
  >
    <tbody>
      <tr>
        <td
          className="thin text-middle"
        >
          <Checkbox
            checked={false}
            id="projects-selection"
            onCheck={[Function]}
            thirdState={false}
          />
        </td>
        <td
          className="thin nowrap text-middle"
        >
          <Select
            addLabelText="Add \\"{label}\\"?"
            arrowRenderer={[Function]}
            autosize={true}
            backspaceRemoves={true}
            backspaceToRemoveMessage="Press backspace to remove {label}"
            className="input-medium"
            clearAllText="Clear all"
            clearRenderer={[Function]}
            clearValueText="Clear value"
            clearable={false}
            deleteRemoves={true}
            delimiter=","
            disabled={false}
            escapeClearsValue={true}
            filterOptions={[Function]}
            ignoreAccents={true}
            ignoreCase={true}
            inputProps={Object {}}
            isLoading={false}
            joinValues={false}
            labelKey="label"
            matchPos="any"
            matchProp="any"
            menuBuffer={0}
            menuRenderer={[Function]}
            multi={false}
            name="projects-qualifier"
            noResultsText="No results found"
            onBlurResetsInput={true}
            onChange={[Function]}
            onCloseResetsInput={true}
            optionComponent={[Function]}
            optionRenderer={[Function]}
            options={
              Array [
                Object {
                  "label": "qualifiers.TRK",
                  "value": "TRK",
                },
                Object {
                  "label": "qualifiers.VW",
                  "value": "VW",
                },
                Object {
                  "label": "qualifiers.APP",
                  "value": "APP",
                },
              ]
            }
            pageSize={5}
            placeholder="Select..."
            required={false}
            scrollMenuIntoView={true}
            searchable={false}
            simpleValue={false}
            tabSelectsValue={true}
            value="TRK"
            valueComponent={[Function]}
            valueKey="value"
            valueRenderer={[Function]}
          />
        </td>
        <td
          className="thin nowrap text-middle"
        >
          <DateInput
            format="yy-mm-dd"
            inputClassName="input-medium"
            name="analyzed-before"
            onChange={[Function]}
            placeholder="last_analysis_before"
          />
        </td>
        <td
          className="thin nowrap text-middle"
        >
          <Checkbox
            checked={false}
            className="link-checkbox-control"
            id="projects-provisioned"
            onCheck={[Function]}
            thirdState={false}
          >
            <span
              className="little-spacer-left"
            >
              provisioning.only_provisioned
              <Tooltip
                overlay="provisioning.only_provisioned.tooltip"
                placement="bottom"
              >
                <i
                  className="spacer-left icon-help"
                />
              </Tooltip>
            </span>
          </Checkbox>
        </td>
        <td
          className="text-middle"
        >
          <form
            className="search-box"
            onSubmit={[Function]}
          >
            <button
              className="search-box-submit button-clean"
            >
              <i
                className="icon-search"
              />
            </button>
            <input
              className="search-box-input input-medium"
              onChange={[Function]}
              placeholder="Search"
              type="search"
              value=""
            />
          </form>
        </td>
        <td
          className="thin nowrap text-middle"
        >
          <button
            className="js-bulk-apply-permission-template"
            disabled={false}
            onClick={[Function]}
          >
            permission_templates.bulk_apply_permission_template
          </button>
          <button
            className="js-delete spacer-left button-red"
            disabled={false}
            onClick={[Function]}
          >
            delete
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders 1`] = `
<div
  className="big-spacer-bottom"
>
  <table
    className="data"
  >
    <tbody>
      <tr>
        <td
          className="thin text-middle"
        >
          <Checkbox
            checked={false}
            id="projects-selection"
            onCheck={[Function]}
            thirdState={false}
          />
        </td>
        <td
          className="thin nowrap text-middle"
        >
          <DateInput
            format="yy-mm-dd"
            inputClassName="input-medium"
            name="analyzed-before"
            onChange={[Function]}
            placeholder="last_analysis_before"
          />
        </td>
        <td
          className="thin nowrap text-middle"
        >
          <Checkbox
            checked={false}
            className="link-checkbox-control"
            id="projects-provisioned"
            onCheck={[Function]}
            thirdState={false}
          >
            <span
              className="little-spacer-left"
            >
              provisioning.only_provisioned
              <Tooltip
                overlay="provisioning.only_provisioned.tooltip"
                placement="bottom"
              >
                <i
                  className="spacer-left icon-help"
                />
              </Tooltip>
            </span>
          </Checkbox>
        </td>
        <td
          className="text-middle"
        >
          <form
            className="search-box"
            onSubmit={[Function]}
          >
            <button
              className="search-box-submit button-clean"
            >
              <i
                className="icon-search"
              />
            </button>
            <input
              className="search-box-input input-medium"
              onChange={[Function]}
              placeholder="Search"
              type="search"
              value=""
            />
          </form>
        </td>
        <td
          className="thin nowrap text-middle"
        >
          <button
            className="js-bulk-apply-permission-template"
            disabled={false}
            onClick={[Function]}
          >
            permission_templates.bulk_apply_permission_template
          </button>
          <button
            className="js-delete spacer-left button-red"
            disabled={false}
            onClick={[Function]}
          >
            delete
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
